# NED_ML_Batch5

05_class_fastapi/ned_fastapi/: README.md  pyproject.toml  request.ipynb
05_class_fastapi/ned_fastapi/ned_fastapi/: main.py  main1.py  main2.py  main3.py  main4.py
05_class_fastapi/ned_fastapi/tests/: test_main.py
08_sqlmodel/ned_sqlmodel/: pyproject.toml
08_sqlmodel/ned_sqlmodel/ned_sqlmodel/: main.py  main1.py  main2.py
16_WEEK8_CREWAI/: new-blog-post.md  requirements.txt
16_WEEK8_CREWAI/crewgooglegemini/: agents.py  crew.py  new-blog-post.md
class4/: README.md
