[tool.poetry]
name = "ned-sqlmodel"
version = "0.1.0"
description = ""
authors = ["Sir Qasim <m.qasim077@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlmodel = "^0.0.18"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
psycopg = "^3.1.19"
pip = "^24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
